# orph2

./: .gitignore  AGENTS.md  COPILOT_INSTRUCTIONS.md  README.md  RESEARCH_SPEC.md  pyproject.toml  requirements.txt
benchmarks/: gaia_lite_v0.jsonl  local_reasoning_ood_v1.jsonl  local_reasoning_ood_v2.jsonl  local_reasoning_ood_v3.jsonl  local_reasoning_ood_v4.jsonl  local_reasoning_ood_v5.jsonl  local_reasoning_ood_v6.jsonl
configs/: core_stage1.yaml  core_stage1_v2.yaml  core_stage1_v3.yaml  core_stage1_v3_entropy_relax.yaml  core_stage1_v3_long.yaml  core_stage1_v3_oracle_ood.yaml  core_stage1_v4.yaml  core_stage1_v5_probe_sched.yaml  core_stage1_v5_signal.yaml  debug.yaml  default.yaml  small.yaml  small_aligned_smoke.yaml  small_aligned_v1.yaml  small_aligned_v2.yaml  small_aligned_v3.yaml  small_ood_paramshift.yaml  small_tuned.yaml  small_tuned_v2.yaml  small_tuned_v3.yaml  small_tuned_v3_long.yaml  small_tuned_v4_long.yaml  train.yaml
docs/: BENCHMARK_PLAN.md  BENCHMARK_REALITY_PROTOCOL.md  EXPERIMENT_LOG.md  EXTERNAL_BENCHMARK_ONRAMP.md  INSIGHT_ORIGINALITY_REVIEW.md  LITERATURE_BASELINE_REGISTRY.json  LLM_AGENT_DIRECTION.md  ORACLE_PROTOCOL.md  RL_DIRECTION.md  SOTA_BASELINE_POLICY.md  SYSTEM_COMPONENTS_AND_CONTRIBUTIONS.md
legacy/: README.md  requirements-benchmarks.txt
llm_agent/: __init__.py  agent.py  benchmarks.py  eval.py  learned_solver.py  model_clients.py  types.py
ood_solver/: types.py  utils.py
scripts/: audit_benchmark_leakage.py  audit_prompt_leakage.py  auto_iterate_balancing_vs_sota.py  compare_llm_agent_benchmark.py  eval.py  train.py  (+24 more)
(+211 files in other folders)
