[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ood-solver"
version = "0.1.0"
description = "LLM-agent orchestration and OOD-focused evaluation framework"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.26",
]
